06/http-log.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-log
spec:
  parentRefs:
    - name: insecure-port
  hostnames:
    - "www.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /http-log
      backendRefs:
        - group: ""
          kind: Service
          name: http-log
          port: 80
          weight: 1
